--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.7.9",
     "class-validator": "^0.14.1",
+    "graphql": "^16.10.0",
+    "graphql-tools": "^9.0.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
