--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.7.9",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-tools": "^9.0.13",
     "reflect-metadata": "^0.2.2",
